message from parent to child and child to parent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+
+<app-parent></app-parent>
+
+
+<!--
 <div class="wrapper d-flex flex-column align-items-center ">
 	<h1 class="title">todos</h1>
 	<div class="row justify-content-center w-100">
@@ -14,3 +19,4 @@
 		Copyright TodoApp
 	</small>
 </div> 
+-->
