share data using ViewChild

--- a/src/app/Learnings/child/child.component.html
+++ b/src/app/Learnings/child/child.component.html
@@ -1,9 +1,17 @@
 <div class="bg-success">
-	<h3>Message from parent to Child</h3>
+	<h3>Message from parent to Child Using Input Output</h3>
 	<p>Say {{messageFromParent}}</p>
-	
-	<h3>Input Message to Parent</h3>
-	<input  type="text" [(ngModel)]="this.messageToParent">
-	
+
+	<h3>Input Message to Parent Using Input Output</h3>
+	<input type="text" [(ngModel)]="this.messageToParent">
+
 	<button class="btn btn-light" (click)="this.sendMessage()">Click to send Parent Message</button>
+</div>
+
+<div class="bg-secondary">
+
+	<h3>Input Message to Parent Using ViewChild</h3>
+	<input type="text" [(ngModel)]="this.messageToParentViewChild">
+
+	
 </div>
