--- a/src/app/Learnings/parent/parent.component.html
+++ b/src/app/Learnings/parent/parent.component.html
@@ -1,12 +1,19 @@
 <div class="bg-info text-center">
 	<div class="form">
-		<h1>Message Parent to Child</h1>
+		<h1>Message Parent to Child Using Input Output</h1>
 		<input type="text" [(ngModel)]="this.messageToChild">
 	</div>
 	<div class="form">
-		<h1>Message From Child</h1>
+		<h1>Message From Child Using Input Output</h1>
 		<label>{{this.messageFromChild}}</label>
 	</div>
+	<div class="form">
+		<h1>Message From Child Using ViewChild</h1>
+		<button class="btn btn-light" (click)="this.getMess()">Get Mess</button>
+		<label>{{this.messageFromChildViewChild}}</label>
+
+	</div>
+	
 
 	<app-child [messageFromParent]="messageToChild" (messageEvent)="this.receiveMessage($event)"></app-child>
 </div>
