learn ngrx/store

--- a/src/app/ToDoAppLayouts/add-task-modal/add-task-modal.component.html
+++ b/src/app/ToDoAppLayouts/add-task-modal/add-task-modal.component.html
@@ -1,7 +1,7 @@
 <!--Start Modal Confirm-->
 <ng-template #taskModal let-modal>
 	<div class="modal-header">
-		<h4 id="modal-title" class="modal-title">New Task</h4>
+		<h4 id="modal-title" class="modal-title">Task Details</h4>
 		<button type="button" class="btn-close" (click)="modal.dismiss('Cross click')"></button>
 	</div>
 	<div class="modal-body">
