--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,11 @@
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
+					<a class="nar-link active" [routerLink]="['/store-data']">Store Data Ngrx Page</a>
+				</li>
+				&nbsp;
+				&nbsp;
+				<li class="nav-item">
 					<a class="nar-link active" [routerLink]="['/todoapp']">TodoApp Page</a>
 				</li>
 				&nbsp;
