--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nar-link active" [routerLink]="['/store-data']">Store Data Ngrx Page</a>
+					<a class="nar-link active" [routerLink]="['/gallery']">Store Data Ngrx Page</a>
 				</li>
 				&nbsp;
 				&nbsp;
